crates/plotnik-tests/tests/02-parser/recovery_validation/exact_anchor_in_alternation.txt
Q = [
  (a)
  .!
  (b)
]
------------------ DIAGNOSTICS -------------------
error: anchors cannot appear directly in alternations
 --> query.ptk:3:3
  |
3 |   .!
  |   ^^
  |
help: put the anchored siblings in a sequence within one alternative
